--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     </div>
     <!-- Userhash input field -->
     <div class="userhash-section">
-      <input type="text" id="userhashInput" placeholder="Userhash" maxlength="25">
+      <input type="text" id="userhashInput" placeholder="Userhash (Optional!)" maxlength="25">
     </div>
 
     <!-- File selection input field -->
